# verbadis.co

./: .env.example  .gitignore  Cargo.toml  README.md
db/migrations/: 20250127072249_init.sql  20250127073659_populate_words.sql  20250201002057_populate_challenges.sql
infra/: README.md
scripts/: init_db.sh
src/: main.rs
src/embeddings/: meaning.rs  mod.rs  ngram.rs
src/models/: challenge.rs  mod.rs  word.rs
src/router/: challenges.rs  mod.rs  words.rs
styles/: styles.css
templates/: main.html  root.html  train.html
templates/components/: challenge-list.html  header.html  word-list.html
templates/pages/: challenge.html  challenges.html  root.html  words.html
