[package]
name = "word-training"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = { version = "0", features = ["with-axum"] }
askama_axum = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite"] }
