[package]
name = "word-training"
version = "0.1.0"
edition = "2021"

[dependencies]
# askama_axum not compatible with 0.8 yet
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
askama = { version = "0", features = ["with-axum"] }
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"
